chore: fix license and author in package.json

--- a/package.json
+++ b/package.json
@@ -12,6 +12,6 @@
     "build": "tsc"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "author": "Patrick Kuen <p.kuen@cloudacy.com>",
+  "license": "MIT"
 }
